2003-10-03  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* name-lookup.c (binding_entry_free): Nullify name and type
	fields. 

2003-10-02  Mark Mitchell  <mark@codesourcery.com>

	PR c++/12486
	* typeck.c (finish_class_member_access_expr): Issue diagnostic
	on erroneous use of qualified name.

2003-09-30  Richard Henderson  <rth@redhat.com>

	* decl.c (duplicate_decls): Copy DECL_SAVED_INSNS too.

2003-09-30  Kelley Cook  <kelleycoook@wideopenwest.com>

	* g++spec.c: Convert to ISO C90 prototypes.
	* parser.c: Likewise.

2003-09-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* decl.c (pop_binding): Don't mess with nullifying binding->scope
	here. 
	* name-lookup.c: Re-format.
	(cxx_binding_free): Nullify binding->scope.

2003-09-29  Jan Hubicka  <jh@suse.cz>

	PR C++/12047
	* except.c (build_eh_type_type): Call mark_used on the type.

2003-09-28  Richard Henderson  <rth@redhat.com>

	* typeck.c (c_expand_asm_operands): Take location_t, instead of
	individual file and line.

2003-09-28  Andreas Jaeger  <aj@suse.de>

	* decl.c (cxx_builtin_type_decls): Convert to ISO C90 function
	definition.
	* init.c (push_base_cleanups): Likewise.
	* decl2.c (finish_file): Likewise.
	* mangle.c (init_mangle): Likewise.
	(dump_substitution_candidates): Likewise.
	* search.c: Likewise.

2003-09-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* name-lookup.h (get_global_value_if_present): New function.
	(is_typename_at_global_scope): Likewise.
	* except.c (do_begin_catch): Use get_global_value_if_present.
	(do_end_catch): Likewise.
	(do_allocate_exception): Likewise.
	(do_free_exception): Likewise.
	(build_throw): Likewise.
	* parser.c (cp_parser_member_declaration): Likewise.
	* rtti.c (throw_bad_cast): Likewise.
	(throw_bad_typeid): Likewise.
	* decl.c (check_tag_decl): Use is_typename_at_global_scope.
	(grokdeclarator): Likewise.
	* cp-tree.h (global_namespace): Move to name-lookup.h
	* call.c (call_builtin_trap): Tidy.
