@@ -2926,31 +2926,6 @@ typedef enum cp_lvalue_kind {
   clk_packed = 8    /* An lvalue for a packed field. */
 } cp_lvalue_kind;
 
-/* The kinds of scopes we recognize.  */
-typedef enum scope_kind {
-  sk_block = 0,      /* An ordinary block scope.  This enumerator must
-			have the value zero because "cp_binding_level"
-			is initialized by using "memset" to set the
-			contents to zero, and the default scope kind
-			is "sk_block".  */
-  sk_cleanup,        /* A scope for (pseudo-)scope for cleanup.  It is
-                        peusdo in that it is transparent to name lookup
-                        activities.  */
-  sk_try,	     /* A try-block.  */
-  sk_catch,          /* A catch-block.  */
-  sk_for,            /* The scope of the variable declared in a
-			for-init-statement.  */
-  sk_function_parms, /* The scope containing function parameters.  */
-  sk_class,          /* The scope containing the members of a class.  */
-  sk_namespace,      /* The scope containing the members of a
-			namespace, including the global scope.  */
-  sk_template_parms, /* A scope for template parameters.  */
-  sk_template_spec   /* Like sk_template_parms, but for an explicit
-			specialization.  Since, by definition, an
-			explicit specialization is introduced by
-			"template <>", this scope is always empty.  */
-} scope_kind;
-
 /* Various kinds of template specialization, instantiation, etc.  */
 typedef enum tmpl_spec_kind {
   tsk_none,                /* Not a template at all.  */
